test/type-checking/good/Return1.cc
int max(int x, int y) {
  if (x < y) {
    return y;
  } else {
    return x;
  }
}

int main() {
   int z = 1 + 1;
  return max(z, 5);
}
