test/type-checking/bad/MissingFunction.cc
/*
int max(int x, int y) {
  if (x < y) {
    return y;
  } else {
    return x;
  }
}
*/

int main()
{
  int x;

  x = max(x, x);

  return 0;
}
